--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">Deep Learning</h4>
-                            <p>Deploy various architectures for both structured (numerical) and unstructured data (images, videos, texts)</p>
+                            <p>Deploy various architectures for both structured and unstructured data (images, videos, texts)</p>
                         </div>
                     </div>
                 </div>
@@ -215,12 +215,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Temporal series analysis</h4>
+                <h4>Forecasting calls arrivals</h4>
                 <p>Axa Assistance France</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-6.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -231,27 +231,27 @@
               <div class="portfolio-info">
                 <h4>Shift scheduling</h4>
                 <p>Axa Assistance France</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
 
-<!--          <div class="col-lg-4 col-md-6 portfolio-item filter-web">-->
-<!--            <div class="portfolio-wrap">-->
-<!--              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">-->
-<!--              <div class="portfolio-info">-->
-<!--                <h4>Web 3</h4>-->
-<!--                <p>Web</p>-->
-<!--                <div class="portfolio-links">-->
-<!--                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-14-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>DataViz</h4>
+                <p>Axa Assistance France</p>
+                <div class="portfolio-links">
+<!--                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>-->
+                  <a href="portfolio-details-14.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -259,10 +259,10 @@
               <div class="portfolio-info">
                 <h4>Budget planning</h4>
                 <p>Bios Madagascar</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -273,10 +273,10 @@
               <div class="portfolio-info">
                 <h4>Electricity consumption prediction</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -302,10 +302,10 @@
               <div class="portfolio-info">
                 <h4>Big Data Management</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-7.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -316,10 +316,10 @@
               <div class="portfolio-info">
                 <h4>NLP & Network analysis</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-8.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -344,10 +344,10 @@
               <div class="portfolio-info">
                 <h4>Explainable Artificial Intelligence</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-9.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -358,10 +358,10 @@
               <div class="portfolio-info">
                 <h4>Bankruptcy prediction</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -372,10 +372,10 @@
               <div class="portfolio-info">
                 <h4>Traffic signs detection</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -386,10 +386,10 @@
               <div class="portfolio-info">
                 <h4>House price prediction</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-10.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -400,10 +400,10 @@
               <div class="portfolio-info">
                 <h4>Tourist flows analysis</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-11.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -414,10 +414,10 @@
               <div class="portfolio-info">
                 <h4>Weather classification</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-12.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -428,10 +428,10 @@
               <div class="portfolio-info">
                 <h4>Web portfolio development</h4>
                 <p>Personnal project</p>
-<!--                <div class="portfolio-links">-->
+                <div class="portfolio-links">
 <!--                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>-->
-<!--                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
-<!--                </div>-->
+                  <a href="portfolio-details-13.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
