--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-13-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-13-2.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web portfolio development</h4>
                 <p>Personnal project</p>
